[techdebt]: [PL-22547]: JDK-11 merge to develop (#33711)
* [PL-22547]: Removing 948 Access Control Admin

* [PL-22547]: Removing 90-core in Access Control

* [PL-22547]: Removing 948 Access Control SDK

* [PL-22547]: Updating Nullable NotNull

* [PL-22547]: Removed 948 Access Control

* [PL-22547]: Removed 948 Access Control

* feat [DEL-3469]: JDK11 upgrade (#31520)

* [Feat]:[PL-22547]:JDK upgrade 8 to 11

* [Feat]:[PL-21913]:JDK version upgrade - Access control service

* [PL-22547]: JDK Upgrade - CG Manager

[PL-22547]: JDK Upgrade for CG Manager

[PL-22547]: update bazel_script

[PL-22547]: Updated InvalidActivityException

[PL-22547]: glassfish

[PL-22547]: Solves javax problem

[PL-22547]: Codec for Base64

Using updated library

[PL-22547]: Updated lib for NotNull

[PL-22547]: adding back cg manager

[PL-22547]: removed alpine

[PL-22547]: Removing Alpine

Check

[PL-22547]: remove java -jar

[PL-22547]: removed classpath metadata

[PL-22547]: update dockerfile for classpath_metadata.json

[PL-22547]: removed log/portal.log

[PL-22547]: verifying

[PL-22547]: remove version

[PL-22547]: added back portal.log

[PL-22547]: hopefully final change

[PL-22547]: right start script.

[PL-22547]: updated right file

[PL-22547]: java version

[PL-22547]: Xboot remove

[PL-22547]: atmosphere

Revert "[PL-22547]: atmosphere"

This reverts commit 16168aa4061ecbc9ea227e664a84b7c27a07a775.

* [PL-22547]: Rebasing

* [PL-22547]: Update maven_install

* [PL-22547]: Pipeline Service Upgrade

* [PL-22547]: NG Manager Service Upgrade

* [PL-22547]: Template Service Upgrade

* [PL-22547]: CI Manager Service Upgrade

* [PL-22547]: CI Manager Service Upgrade 2

* [PL-22547]: NG Dashboard Service Upgrade

* [PL-22547]: CVNG Service Upgrade

* [PL-22547]: CENG ChangeData Delegate Service Upgrade

* [PL-22547]: Bazel_script.sh

* [PL-22547]: All Services Upgrade

* [PL-22547]: Alp

* 